src/generated/ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParLatte.y
-----------------------------------------------------------------------------

state 147 contains 1 shift/reduce conflicts.

rule 47 is unused
rule 48 is unused
rule 49 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> 'class' Ident '{' ListClassPole '}'      (6)
	TopDef -> 'class' Ident 'extends' Ident '{' ListClassPole '}'   (7)
	ClassPole -> Type Ident ';'                        (8)
	ClassPole -> Type Ident '(' ListArg ')' Block      (9)
	ListTopDef -> TopDef                               (10)
	ListTopDef -> TopDef ListTopDef                    (11)
	ListClassPole -> ClassPole                         (12)
	ListClassPole -> ClassPole ListClassPole           (13)
	Arg -> Type Ident                                  (14)
	ListArg ->                                         (15)
	ListArg -> Arg                                     (16)
	ListArg -> Arg ',' ListArg                         (17)
	Block -> '{' ListStmt '}'                          (18)
	ListStmt ->                                        (19)
	ListStmt -> ListStmt Stmt                          (20)
	Stmt -> ';'                                        (21)
	Stmt -> Block                                      (22)
	Stmt -> Type ListItem ';'                          (23)
	Stmt -> LValue '=' Expr ';'                        (24)
	Stmt -> LValue '++' ';'                            (25)
	Stmt -> LValue '--' ';'                            (26)
	Stmt -> 'return' Expr ';'                          (27)
	Stmt -> 'return' ';'                               (28)
	Stmt -> 'if' '(' Expr ')' Stmt                     (29)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (30)
	Stmt -> 'while' '(' Expr ')' Stmt                  (31)
	Stmt -> 'for' '(' Type Ident ':' Ident ')'         (32)
	Stmt -> Expr ';'                                   (33)
	Item -> LValue                                     (34)
	Item -> LValue '=' Expr                            (35)
	ListItem -> Item                                   (36)
	ListItem -> Item ',' ListItem                      (37)
	LValue -> Ident                                    (38)
	LValue -> LValue '.' Ident                         (39)
	LValue -> LValue '[' Expr ']'                      (40)
	Type -> 'int'                                      (41)
	Type -> 'string'                                   (42)
	Type -> 'boolean'                                  (43)
	Type -> 'void'                                     (44)
	Type -> Type '[]'                                  (45)
	Type -> Ident                                      (46)
	ListType ->                                        (47)
	ListType -> Type                                   (48)
	ListType -> Type ',' ListType                      (49)
	Expr8 -> LValue                                    (50)
	Expr8 -> Integer                                   (51)
	Expr8 -> 'true'                                    (52)
	Expr8 -> 'false'                                   (53)
	Expr8 -> LValue '(' ListExpr ')'                   (54)
	Expr8 -> String                                    (55)
	Expr8 -> '(' Expr ')'                              (56)
	Expr7 -> 'new' Type '[' Expr ']'                   (57)
	Expr7 -> 'new' Type                                (58)
	Expr7 -> Expr8                                     (59)
	Expr6 -> '(' Type ')null'                          (60)
	Expr6 -> Expr7                                     (61)
	Expr5 -> '-' Expr6                                 (62)
	Expr5 -> '!' Expr6                                 (63)
	Expr5 -> Expr6                                     (64)
	Expr4 -> Expr4 MulOp Expr5                         (65)
	Expr4 -> Expr5                                     (66)
	Expr3 -> Expr3 AddOp Expr4                         (67)
	Expr3 -> Expr4                                     (68)
	Expr2 -> Expr2 RelOp Expr3                         (69)
	Expr2 -> Expr3                                     (70)
	Expr1 -> Expr2 '&&' Expr1                          (71)
	Expr1 -> Expr2                                     (72)
	Expr -> Expr1 '||' Expr                            (73)
	Expr -> Expr1                                      (74)
	ListExpr ->                                        (75)
	ListExpr -> Expr                                   (76)
	ListExpr -> Expr ',' ListExpr                      (77)
	AddOp -> '+'                                       (78)
	AddOp -> '-'                                       (79)
	MulOp -> '*'                                       (80)
	MulOp -> '/'                                       (81)
	MulOp -> '%'                                       (82)
	RelOp -> '<'                                       (83)
	RelOp -> '<='                                      (84)
	RelOp -> '>'                                       (85)
	RelOp -> '>='                                      (86)
	RelOp -> '=='                                      (87)
	RelOp -> '!='                                      (88)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	')null'        { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'.'            { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	':'            { PT _ (TS _ 16) }
	';'            { PT _ (TS _ 17) }
	'<'            { PT _ (TS _ 18) }
	'<='           { PT _ (TS _ 19) }
	'='            { PT _ (TS _ 20) }
	'=='           { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	'[]'           { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'boolean'      { PT _ (TS _ 27) }
	'class'        { PT _ (TS _ 28) }
	'else'         { PT _ (TS _ 29) }
	'extends'      { PT _ (TS _ 30) }
	'false'        { PT _ (TS _ 31) }
	'for'          { PT _ (TS _ 32) }
	'if'           { PT _ (TS _ 33) }
	'int'          { PT _ (TS _ 34) }
	'new'          { PT _ (TS _ 35) }
	'return'       { PT _ (TS _ 36) }
	'string'       { PT _ (TS _ 37) }
	'true'         { PT _ (TS _ 38) }
	'void'         { PT _ (TS _ 39) }
	'while'        { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'||'           { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6, 7
	ClassPole       rules 8, 9
	ListTopDef      rules 10, 11
	ListClassPole   rules 12, 13
	Arg             rule  14
	ListArg         rules 15, 16, 17
	Block           rule  18
	ListStmt        rules 19, 20
	Stmt            rules 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33
	Item            rules 34, 35
	ListItem        rules 36, 37
	LValue          rules 38, 39, 40
	Type            rules 41, 42, 43, 44, 45, 46
	ListType        rules 47, 48, 49
	Expr8           rules 50, 51, 52, 53, 54, 55, 56
	Expr7           rules 57, 58, 59
	Expr6           rules 60, 61
	Expr5           rules 62, 63, 64
	Expr4           rules 65, 66
	Expr3           rules 67, 68
	Expr2           rules 69, 70
	Expr1           rules 71, 72
	Expr            rules 73, 74
	ListExpr        rules 75, 76, 77
	AddOp           rules 78, 79
	MulOp           rules 80, 81, 82
	RelOp           rules 83, 84, 85, 86, 87, 88

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	Type           goto state 7

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	')null'        reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 46)

	'!='           reduce using rule 46
	'%'            reduce using rule 46
	'&&'           reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'['            reduce using rule 46
	'[]'           reduce using rule 46
	']'            reduce using rule 46
	'||'           reduce using rule 46
	L_ident        reduce using rule 46


State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 10)
	ListTopDef -> TopDef . ListTopDef                   (rule 11)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2
	%eof           reduce using rule 10

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 16
	Type           goto state 7

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Type -> Type . '[]'                                 (rule 45)

	'[]'           shift, and enter state 15
	L_ident        shift, and enter state 2

	Ident          goto state 14

State 8

	Type -> 'boolean' .                                 (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	')null'        reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'['            reduce using rule 43
	'[]'           reduce using rule 43
	']'            reduce using rule 43
	'||'           reduce using rule 43
	L_ident        reduce using rule 43


State 9

	TopDef -> 'class' . Ident '{' ListClassPole '}'     (rule 6)
	TopDef -> 'class' . Ident 'extends' Ident '{' ListClassPole '}'    (rule 7)

	L_ident        shift, and enter state 2

	Ident          goto state 13

State 10

	Type -> 'int' .                                     (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	')null'        reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	']'            reduce using rule 41
	'||'           reduce using rule 41
	L_ident        reduce using rule 41


State 11

	Type -> 'string' .                                  (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	')null'        reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'['            reduce using rule 42
	'[]'           reduce using rule 42
	']'            reduce using rule 42
	'||'           reduce using rule 42
	L_ident        reduce using rule 42


State 12

	Type -> 'void' .                                    (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	')null'        reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'['            reduce using rule 44
	'[]'           reduce using rule 44
	']'            reduce using rule 44
	'||'           reduce using rule 44
	L_ident        reduce using rule 44


State 13

	TopDef -> 'class' Ident . '{' ListClassPole '}'     (rule 6)
	TopDef -> 'class' Ident . 'extends' Ident '{' ListClassPole '}'    (rule 7)

	'extends'      shift, and enter state 18
	'{'            shift, and enter state 19


State 14

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 17


State 15

	Type -> Type '[]' .                                 (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	')null'        reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'['            reduce using rule 45
	'[]'           reduce using rule 45
	']'            reduce using rule 45
	'||'           reduce using rule 45
	L_ident        reduce using rule 45


State 16

	ListTopDef -> TopDef ListTopDef .                   (rule 11)

	%eof           reduce using rule 11


State 17

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 15
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 24
	ListArg        goto state 25
	Type           goto state 26

State 18

	TopDef -> 'class' Ident 'extends' . Ident '{' ListClassPole '}'    (rule 7)

	L_ident        shift, and enter state 2

	Ident          goto state 23

State 19

	TopDef -> 'class' Ident '{' . ListClassPole '}'     (rule 6)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	ClassPole      goto state 20
	ListClassPole  goto state 21
	Type           goto state 22

State 20

	ListClassPole -> ClassPole .                        (rule 12)
	ListClassPole -> ClassPole . ListClassPole          (rule 13)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            reduce using rule 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	ClassPole      goto state 20
	ListClassPole  goto state 33
	Type           goto state 22

State 21

	TopDef -> 'class' Ident '{' ListClassPole . '}'     (rule 6)

	'}'            shift, and enter state 32


State 22

	ClassPole -> Type . Ident ';'                       (rule 8)
	ClassPole -> Type . Ident '(' ListArg ')' Block     (rule 9)
	Type -> Type . '[]'                                 (rule 45)

	'[]'           shift, and enter state 15
	L_ident        shift, and enter state 2

	Ident          goto state 31

State 23

	TopDef -> 'class' Ident 'extends' Ident . '{' ListClassPole '}'    (rule 7)

	'{'            shift, and enter state 30


State 24

	ListArg -> Arg .                                    (rule 16)
	ListArg -> Arg . ',' ListArg                        (rule 17)

	')'            reduce using rule 16
	','            shift, and enter state 29


State 25

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 28


State 26

	Arg -> Type . Ident                                 (rule 14)
	Type -> Type . '[]'                                 (rule 45)

	'[]'           shift, and enter state 15
	L_ident        shift, and enter state 2

	Ident          goto state 27

State 27

	Arg -> Type Ident .                                 (rule 14)

	')'            reduce using rule 14
	','            reduce using rule 14


State 28

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 39

	Block          goto state 38

State 29

	ListArg -> Arg ',' . ListArg                        (rule 17)

	')'            reduce using rule 15
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 24
	ListArg        goto state 37
	Type           goto state 26

State 30

	TopDef -> 'class' Ident 'extends' Ident '{' . ListClassPole '}'    (rule 7)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	ClassPole      goto state 20
	ListClassPole  goto state 36
	Type           goto state 22

State 31

	ClassPole -> Type Ident . ';'                       (rule 8)
	ClassPole -> Type Ident . '(' ListArg ')' Block     (rule 9)

	'('            shift, and enter state 34
	';'            shift, and enter state 35


State 32

	TopDef -> 'class' Ident '{' ListClassPole '}' .     (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_ident        reduce using rule 6
	%eof           reduce using rule 6


State 33

	ListClassPole -> ClassPole ListClassPole .          (rule 13)

	'}'            reduce using rule 13


State 34

	ClassPole -> Type Ident '(' . ListArg ')' Block     (rule 9)

	')'            reduce using rule 15
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 24
	ListArg        goto state 42
	Type           goto state 26

State 35

	ClassPole -> Type Ident ';' .                       (rule 8)

	'boolean'      reduce using rule 8
	'int'          reduce using rule 8
	'string'       reduce using rule 8
	'void'         reduce using rule 8
	'}'            reduce using rule 8
	L_ident        reduce using rule 8


State 36

	TopDef -> 'class' Ident 'extends' Ident '{' ListClassPole . '}'    (rule 7)

	'}'            shift, and enter state 41


State 37

	ListArg -> Arg ',' ListArg .                        (rule 17)

	')'            reduce using rule 17


State 38

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'boolean'      reduce using rule 5
	'class'        reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_ident        reduce using rule 5
	%eof           reduce using rule 5


State 39

	Block -> '{' . ListStmt '}'                         (rule 18)

	'!'            reduce using rule 19
	'('            reduce using rule 19
	'-'            reduce using rule 19
	';'            reduce using rule 19
	'boolean'      reduce using rule 19
	'false'        reduce using rule 19
	'for'          reduce using rule 19
	'if'           reduce using rule 19
	'int'          reduce using rule 19
	'new'          reduce using rule 19
	'return'       reduce using rule 19
	'string'       reduce using rule 19
	'true'         reduce using rule 19
	'void'         reduce using rule 19
	'while'        reduce using rule 19
	'{'            reduce using rule 19
	'}'            reduce using rule 19
	L_ident        reduce using rule 19
	L_integ        reduce using rule 19
	L_quoted       reduce using rule 19

	ListStmt       goto state 40

State 40

	Block -> '{' ListStmt . '}'                         (rule 18)
	ListStmt -> ListStmt . Stmt                         (rule 20)

	'!'            shift, and enter state 60
	'('            shift, and enter state 61
	'-'            shift, and enter state 62
	';'            shift, and enter state 63
	'boolean'      shift, and enter state 8
	'false'        shift, and enter state 64
	'for'          shift, and enter state 65
	'if'           shift, and enter state 66
	'int'          shift, and enter state 10
	'new'          shift, and enter state 67
	'return'       shift, and enter state 68
	'string'       shift, and enter state 11
	'true'         shift, and enter state 69
	'void'         shift, and enter state 12
	'while'        shift, and enter state 70
	'{'            shift, and enter state 39
	'}'            shift, and enter state 71
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 72
	L_quoted       shift, and enter state 73

	Ident          goto state 44
	Integer        goto state 45
	String         goto state 46
	Block          goto state 47
	Stmt           goto state 48
	LValue         goto state 49
	Type           goto state 50
	Expr8          goto state 51
	Expr7          goto state 52
	Expr6          goto state 53
	Expr5          goto state 54
	Expr4          goto state 55
	Expr3          goto state 56
	Expr2          goto state 57
	Expr1          goto state 58
	Expr           goto state 59

State 41

	TopDef -> 'class' Ident 'extends' Ident '{' ListClassPole '}' .    (rule 7)

	'boolean'      reduce using rule 7
	'class'        reduce using rule 7
	'int'          reduce using rule 7
	'string'       reduce using rule 7
	'void'         reduce using rule 7
	L_ident        reduce using rule 7
	%eof           reduce using rule 7


State 42

	ClassPole -> Type Ident '(' ListArg . ')' Block     (rule 9)

	')'            shift, and enter state 43


State 43

	ClassPole -> Type Ident '(' ListArg ')' . Block     (rule 9)

	'{'            shift, and enter state 39

	Block          goto state 112

State 44

	LValue -> Ident .                                   (rule 38)
	Type -> Ident .                                     (rule 46)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	'('            reduce using rule 38
	')'            reduce using rule 38
	')null'        reduce using rule 46
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	'++'           reduce using rule 38
	'-'            reduce using rule 38
	'--'           reduce using rule 38
	'.'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'='            reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'['            reduce using rule 38
	'[]'           reduce using rule 46
	'||'           reduce using rule 38
	L_ident        reduce using rule 46


State 45

	Expr8 -> Integer .                                  (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	']'            reduce using rule 51
	'||'           reduce using rule 51


State 46

	Expr8 -> String .                                   (rule 55)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	']'            reduce using rule 55
	'||'           reduce using rule 55


State 47

	Stmt -> Block .                                     (rule 22)
